// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AmeliproAutoCompleteField > Snapshots > renders the component with all properties filled in 1`] = `
<div
  class="
    amelipro-autocomplete
    d-flex
    flex-column
    flex-md-row
    modified-classes
  "
  id="modified-unique-id-container"
  style="
    max-width: modified-global-max-width;
    min-width: modified-global-min-width;
    width: var(--modified-global-width);
  "
>
  <div class="
    align-start
    amelipro-autocomplete__label-wrapper
    d-inline-flex
    mr-md-2
    mt-md-2
  ">
    <label
      class="
        amelipro-autocomplete__label
        mr-md-2
      "
      for="modified-unique-id"
      id="modified-unique-id-label"
      style="
        max-width: modified-label-max-width;
        min-width: modified-label-min-width;
      "
    >
      Modified label
      <span>
        <span aria-hidden="true">
          &nbsp;*
        </span>
        <span class="d-sr-only">
          &nbsp;Champ obligatoire
        </span>
      </span>
    </label>
  </div>
  <v-autocomplete-stub
    active="false"
    aria-expanded="false"
    aria-required="true"
    autocomplete="list"
    autofocus="false"
    autoselectfirst="false"
    bgcolor="ap-grey-lighten-2"
    chips="false"
    class="
      amelipro-text-field
      pt-0
    "
    clearable="false"
    clearicon="$clear"
    clearonselect="false"
    closablechips="false"
    closetext="$vuetify.close"
    color="ap-blue-darken-1"
    counter="false"
    density="compact"
    direction="horizontal"
    disabled="true"
    eager="true"
    error="false"
    errormessages=""
    filterkeys="title"
    filtermode="intersection"
    flat="false"
    focused="false"
    hidedetails="true"
    hidenodata="false"
    hideselected="false"
    hidespinbuttons="false"
    id="modified-unique-id"
    itemchildren="false"
    itemprops="props"
    items="[object Object],[object Object],[object Object],[object Object]"
    itemtitle="title"
    itemvalue="value"
    loading="false"
    maxerrors="1"
    menu="false"
    menuicon="$dropdown"
    menuprops="[object Object]"
    messages=""
    modelvalue="modified-model-value"
    multiple="false"
    nodatatext="$vuetify.noDataText"
    nofilter="false"
    openonclear="false"
    opentext="$vuetify.open"
    persistentclear="false"
    persistentcounter="false"
    persistenthint="false"
    persistentplaceholder="false"
    placeholder="Modified placeholder"
    readonly=""
    returnobject="false"
    reverse="false"
    role="combobox"
    rules="() => "modified-rules",(value) => {
    let valid;
    if (Array.isArray(value)) {
      valid = value.length !== 0;
    } else {
      valid = Boolean(typeof value === "string" ? value.trim() : value);
    }
    return valid || __vite_ssr_import_0__.ruleMessage(errorMessages, "default");
  }"
    singleline="false"
    style="
      max-width: modified-input-max-width;
      min-width: modified-input-min-width;
      background-color: transparent;
    "
    tile="false"
    transition="false"
    type="text"
    validateon="lazy"
    variant="outlined"
  ></v-autocomplete-stub>
</div>
`;

exports[`AmeliproAutoCompleteField > Snapshots > renders the component with only required properties filled in 1`] = `
<div
  class="
    amelipro-autocomplete
    d-flex
    flex-column
  "
  id="required-unique-id-container"
>
  <div class="
    align-start
    amelipro-autocomplete__label-wrapper
    d-inline-flex
  ">
    <label
      class="amelipro-autocomplete__label"
      for="required-unique-id"
      id="required-unique-id-label"
    >
      Required label
      <!-- v-if -->
    </label>
  </div>
  <v-autocomplete-stub
    active="false"
    aria-expanded="false"
    aria-required="false"
    autocomplete="list"
    autofocus="false"
    autoselectfirst="false"
    bgcolor="ap-white"
    chips="false"
    class="
      amelipro-text-field
      pt-0
    "
    clearable="false"
    clearicon="$clear"
    clearonselect="false"
    closablechips="false"
    closetext="$vuetify.close"
    color="ap-blue-darken-1"
    counter="false"
    density="compact"
    direction="horizontal"
    disabled="false"
    eager="true"
    error="false"
    errormessages=""
    filterkeys="title"
    filtermode="intersection"
    flat="false"
    focused="false"
    hidedetails="false"
    hidenodata="false"
    hideselected="false"
    hidespinbuttons="false"
    id="required-unique-id"
    itemchildren="false"
    itemprops="props"
    items=""
    itemtitle="title"
    itemvalue="value"
    loading="false"
    maxerrors="1"
    menu="false"
    menuicon="$dropdown"
    menuprops="[object Object]"
    messages=""
    multiple="false"
    nodatatext="$vuetify.noDataText"
    nofilter="false"
    openonclear="false"
    opentext="$vuetify.open"
    persistentclear="false"
    persistentcounter="false"
    persistenthint="false"
    persistentplaceholder="false"
    returnobject="false"
    reverse="false"
    role="combobox"
    rules=""
    singleline="false"
    tile="false"
    transition="false"
    type="text"
    variant="outlined"
  ></v-autocomplete-stub>
</div>
`;

exports[`AmeliproAutoCompleteField > render correctly 1`] = `
<div
  class="
    amelipro-autocomplete
    d-flex
    flex-column
  "
  id="my-AutoCompleteField-id-container"
>
  <div class="
    align-start
    amelipro-autocomplete__label-wrapper
    d-inline-flex
  ">
    <label
      class="amelipro-autocomplete__label"
      for="my-AutoCompleteField-id"
      id="my-AutoCompleteField-id-label"
    >
      Mon label
      <!-- v-if -->
    </label>
  </div>
  <div class="
    amelipro-text-field
    pt-0
    v-autocomplete
    v-autocomplete--single
    v-input
    v-input--center-affix
    v-input--density-compact
    v-input--horizontal
    v-locale--is-ltr
    v-text-field
    v-theme--light
  ">
    <!---->
    <div class="v-input__control">
      <div
        class="
          bg-ap-white
          v-field
          v-field--appended
          v-field--center-affix
          v-field--has-background
          v-field--no-label
          v-field--variant-outlined
          v-locale--is-ltr
          v-theme--light
        "
        role="combobox"
      >
        <div class="v-field__overlay"></div>
        <div class="v-field__loader">
          <div
            aria-hidden="true"
            aria-valuemax="100"
            aria-valuemin="0"
            class="
              v-locale--is-ltr
              v-progress-linear
              v-theme--light
            "
            role="progressbar"
            style="
              top: 0px;
              height: 0px;
              --v-progress-linear-height: 2px;
            "
          >
            <!---->
            <div
              class="v-progress-linear__background"
              style="opacity: NaN;"
            ></div>
            <div
              class="v-progress-linear__buffer"
              style="
                opacity: NaN;
                width: 0%;
              "
            ></div>
            <transition-stub
              appear="false"
              css="true"
              name="fade-transition"
              persisted="false"
            >
              <div class="v-progress-linear__indeterminate">
                <div class="
                  long
                  v-progress-linear__indeterminate
                "></div>
                <div class="
                  short
                  v-progress-linear__indeterminate
                "></div>
              </div>
            </transition-stub>
            <!---->
          </div>
        </div>
        <!---->
        <div
          class="v-field__field"
          data-no-activator=""
        >
          <!---->
          <!---->
          <!---->
          <div
            class="v-field__input"
            data-no-activator=""
          >
            <!---->
            <!-- teleport start -->
            <!-- teleport end -->
            <input
              aria-expanded="false"
              aria-required="false"
              autocomplete="list"
              id="my-AutoCompleteField-id"
              size="1"
              type="text"
              value=""
            />
          </div>
          <!---->
        </div>
        <!---->
        <div class="v-field__append-inner">
          <button
            aria-expanded="false"
            class="
              btn--icon
              elevation-0
              rounded-0
              v-btn
              v-btn--density-default
              v-btn--elevated
              v-btn--icon
              v-btn--size-default
              v-btn--variant-elevated
              v-theme--light
            "
            id="my-AutoCompleteField-id-btn"
            plain=""
            style="
              height: auto;
              width: auto;
            "
            tabindex="-1"
            type="button"
          >
            <span class="v-btn__overlay"></span>
            <span class="v-btn__underlay"></span>
            <!---->
            <span
              class="v-btn__content"
              data-no-activator=""
            >
              <span
                class="d-sr-only"
                id="my-AutoCompleteField-id-btn-btn-label"
              >
                Mon label ouvrir la liste
              </span>
              <span
                class="
                  amelipro-icon
                  icon-custom
                "
                id="my-AutoCompleteField-id-btn-icon"
              >
                <span
                  class="amelipro-external-icon"
                  style="
                    background-color: transparent;
                    border-radius: 50%;
                    color: #00749C;
                    padding: 0px;
                  "
                >
                  <i
                    aria-hidden="true"
                    class="
                      M7,10L12,15L17,10H7Z
                      mdi
                      notranslate
                      text-ap-blue-darken-1
                      v-icon
                      v-theme--light
                    "
                    style="
                      font-size: 100%;
                      height: 100%;
                      width: 100%;
                      display: block;
                    "
                  ></i>
                </span>
              </span>
            </span>
            <!---->
            <!---->
          </button>
          <i
            aria-hidden="false"
            aria-label="Open"
            class="
              mdi
              mdi-menu-down
              notranslate
              v-autocomplete__menu-icon
              v-icon
              v-icon--clickable
              v-icon--size-default
              v-theme--light
            "
            role="button"
            tabindex="-1"
            title="Open"
          ></i>
          <!---->
        </div>
        <div class="v-field__outline">
          <div class="v-field__outline__start"></div>
          <!---->
          <div class="v-field__outline__end"></div>
          <!---->
        </div>
      </div>
    </div>
    <!---->
    <div
      aria-live="polite"
      class="v-input__details"
      id="my-AutoCompleteField-id-messages"
      role="alert"
    >
      <transition-group-stub
        appear="false"
        class="v-messages"
        css="true"
        name="slide-y-transition"
        persisted="false"
        tag="div"
      >
        <!---->
      </transition-group-stub>
      <!---->
    </div>
  </div>
</div>
`;
